# SpecialInfo

./: .gitlab-ci.yml  README.md  pyproject.toml  requirements.txt  run.sh
docker/: Dockerfile  build.sh
frontend/: index.html  package.json  vite.config.js
frontend/src/: App.css  App.jsx
frontend/src/components/: OilPriceCard.jsx  PriceCard.jsx
src/: main.py
src/routers/: bitcoin.py  currency.py  gold.py  indices.py  oil.py
src/services/: bitcoin_service.py  currency_service.py  gold_service.py  indices_service.py  oil_service.py
test/: test_bitcoin.py  test_currency.py  test_gold.py  test_indices.py  test_main.py  test_oil.py
