[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "specialinfo"
version = "1.0.0"
description = "特殊資訊 Dashboard - 國際金融商品走勢展示"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "pymysql",
    "cryptography",
]

[project.optional-dependencies]
test = [
    "pytest",
    "httpx",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
